--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-geopandas==0.14.3
-pandas==2.2.2
-shapely==2.0.4
-streamlit==1.32.2
+streamlit
+geopandas
 plotly
-scikit-learn
+pandas
 shapely
 requests
